--- a/src/html/components/business/_header.html
+++ b/src/html/components/business/_header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="header__logo" id="logo">
     <a href="/">
-      <img src="@icons/logo.svg" alt="logo" />
-      <img src="@icons/logo-white.svg" alt="logo" />
+      <img src="@icons/logo-35.svg" alt="logo" />
+      <img src="@icons/logo-35-white.svg" alt="logo" />
     </a>
   </div>
   <div class="header__menu" id="mobile-menu">
