--- a/src/styles/components/ui/_search-bar.scss
+++ b/src/styles/components/ui/_search-bar.scss
@@ -1,15 +1,17 @@
 .search-bar {
-	margin-top: 30px;
-	width: 100%;
-	padding-right: 30px;
-	border: solid 3px $gray10;
-	display: flex;
-	align-items: center;
-	background: transparent;
+	form {
+		margin-top: 30px;
+		width: 100%;
+		padding-right: 30px;
+		border: solid 3px $gray10;
+		display: flex;
+		align-items: center;
+		background: transparent;
 
-	@include tablet {
-		margin-top: 0;
-		padding-right: 15px;
+		@include tablet {
+			margin-top: 0;
+			padding-right: 15px;
+		}
 	}
 
 	input {
