--- a/src/styles/components/business/_media-component.scss
+++ b/src/styles/components/business/_media-component.scss
@@ -72,21 +72,23 @@
 
 			@include tablet_small {
 				padding: 0 0 20px 0;
+			}
 
-				.news-card__date {
-					margin-bottom: 16px;
-				}
+			.news-card__date {
+				margin-left: 38px !important;
+				margin-right: 38px !important;
 
-				h3 {
-					margin-bottom: 10px;
-				}
-
-				p {
-					margin-bottom: 30px;
+				@include tablet {
+					margin-left: 20px !important;
+					margin-right: 20px !important;
 				}
 			}
 
-			div,
+			div {
+				padding: 0;
+				border: none;
+			}
+
 			h3,
 			p,
 			a {
