--- a/src/styles/components/business/_history.scss
+++ b/src/styles/components/business/_history.scss
@@ -161,7 +161,7 @@
 
 		h2 {
 			margin-top: 140px;
-			margin-bottom: 55px;
+			margin-bottom: 35px;
 
 			@include tablet {
 				margin-top: 80px;
@@ -179,6 +179,10 @@
 				height: 400px;
 				object-fit: cover;
 			}
+		}
+
+		p:not(:first-of-type) {
+			margin-top: 20px;
 		}
 	}
 }
