--- a/src/styles/components/business/_massmedia-card.scss
+++ b/src/styles/components/business/_massmedia-card.scss
@@ -1,45 +1,48 @@
 .massmedia-card {
-	padding: 30px 59px;
-	background-color: $gray04;
-	display: grid;
-	grid-template-rows: 120px max-content auto 23px;
-	min-height: 408px;
-
-	@include tablet {
-		padding: 30px 25px;
-		grid-template-rows: auto max-content auto 23px;
-	}
-
-	@include tablet_small {
-		min-height: unset;
-	}
-
-	img {
-		height: unset;
-		width: unset;
-		margin-bottom: 30px;
-		max-width: 100%;
-		max-height: 100px;
+	div {
+		padding: 30px 59px;
+		background-color: $gray04;
+		display: grid;
+		grid-template-rows: 120px max-content auto 23px;
+		min-height: 408px;
+		height: 100%;
 
 		@include tablet {
-			max-height: unset;
+			padding: 30px 25px;
+			grid-template-rows: auto max-content auto 23px;
 		}
-	}
 
-	h3 {
-		margin-bottom: 16px;
-	}
+		@include tablet_small {
+			min-height: unset;
+		}
 
-	p {
-		margin-bottom: 40px;
-
-		@include tablet {
+		img {
+			height: unset;
+			width: unset;
 			margin-bottom: 30px;
-		}
-	}
+			max-width: 100%;
+			max-height: 100px;
 
-	.btn {
-		justify-self: flex-end;
+			@include tablet {
+				max-height: unset;
+			}
+		}
+
+		h3 {
+			margin-bottom: 16px;
+		}
+
+		p {
+			margin-bottom: 40px;
+
+			@include tablet {
+				margin-bottom: 30px;
+			}
+		}
+
+		.btn {
+			justify-self: flex-end;
+		}
 	}
 }
 
