--- a/src/styles/components/business/_service-detail.scss
+++ b/src/styles/components/business/_service-detail.scss
@@ -24,18 +24,20 @@
 
 	p {
 		max-width: 1167px;
-		margin-bottom: 80px;
+		margin-bottom: 10px;
+		margin-top: 10px;
+	}
 
-		@include tablet {
-			margin-bottom: 40px;
-		}
+	li {
+		@include regular-18;
+		margin-left: 14px;
 	}
 
 	.enumeration {
-		margin-bottom: 140px;
+		margin-top: 70px;
 
 		@include tablet {
-			margin-bottom: 80px;
+			margin-top: 40px;
 		}
 	}
 
