--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@
 @import 'components/ui/list';
 @import 'components/ui/search-bar';
 @import 'components/ui/up';
+@import 'components/ui/iframe';
 
 @import 'components/business/breadcrumbs';
 @import 'components/business/header';
@@ -50,6 +51,7 @@
 @import 'components/business/solution-detail';
 @import 'components/business/media-component';
 @import 'components/business/about-company';
+@import 'components/business/company-description';
 @import 'components/business/quote-section';
 @import 'components/business/career';
 @import 'components/business/documents';
