--- a/src/styles/components/business/_reviews-section.scss
+++ b/src/styles/components/business/_reviews-section.scss
@@ -1,10 +1,109 @@
 .reviews-section {
+	padding-bottom: 140px;
+
 	h2 {
 		text-align: right;
 		margin-bottom: 80px;
 
 		@include tablet {
 			margin-bottom: 40px;
+		}
+	}
+
+	&__slider {
+		position: relative;
+
+		.swiper-slide {
+			width: 100%;
+			height: auto;
+			max-width: 510px;
+		}
+
+		.swiper-wrapper {
+			padding-bottom: 80px;
+
+			@include tablet {
+				padding-bottom: 40px;
+			}
+		}
+	}
+
+	&__item {
+		display: flex;
+		flex-direction: column;
+		background-color: $gray04;
+		height: 100%;
+		position: relative;
+	}
+
+	&__iframe {
+		width: 100%;
+		height: auto;
+		max-width: 510px;
+		max-height: 458px;
+
+		@include tablet {
+			max-height: 350px;
+		}
+
+		iframe {
+			width: 100%;
+			height: 458px;
+
+			@include tablet {
+				max-height: 350px;
+			}
+		}
+	}
+
+	&__image {
+		max-height: 458px;
+
+		@include tablet {
+			max-height: 350px;
+		}
+	}
+
+	&__body {
+		padding: 30px;
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+
+		@include tablet {
+			padding: 20px;
+			gap: 24px;
+		}
+
+		.employees__history {
+			margin-top: 0 !important;
+		}
+	}
+
+	&__description {
+		display: flex;
+		flex-direction: column;
+		gap: 15px;
+
+		@include tablet {
+			gap: 12px;
+		}
+
+		span {
+			@include regular-18;
+
+			@include tablet {
+				@include regular-16;
+			}
+		}
+	}
+
+	&__logo {
+		img {
+			width: auto;
+			max-width: 100%;
+			max-height: 58px;
+			object-fit: contain;
 		}
 	}
 }
