--- a/src/styles/components/business/_footer.scss
+++ b/src/styles/components/business/_footer.scss
@@ -95,6 +95,18 @@
 		}
 	}
 
+	&__associations {
+		display: flex;
+		align-items: center;
+		gap: 50px;
+
+		@include tablet {
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 24px;
+		}
+	}
+
 	&__association {
 		color: $gray20;
 		max-width: 377px;
