--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,7 @@
 @import 'components/ui/search-bar';
 @import 'components/ui/up';
 @import 'components/ui/iframe';
+@import 'components/ui/image-box';
 
 @import 'components/business/breadcrumbs';
 @import 'components/business/header';
