--- a/src/styles/components/business/_service-detail.scss
+++ b/src/styles/components/business/_service-detail.scss
@@ -36,7 +36,7 @@
 		li {
 			display: flex;
 			gap: 10px;
-			align-items: center;
+			align-items: baseline;
 			@include regular-18;
 
 			@include tablet {
