--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -294,6 +294,11 @@
 	font-weight: 500;
 }
 
+@mixin medium-14 {
+	font-size: 14px;
+	font-weight: 500;
+}
+
 @mixin medium-12-uppercase {
 	font-size: 12px;
 	font-weight: 500;
