--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -71,4 +71,4 @@
 @import 'components/business/history';
 @import 'components/business/error-page';
 @import 'components/business/cookie';
-
+@import 'components/business/map-preview';
