--- a/src/styles/components/business/_map.scss
+++ b/src/styles/components/business/_map.scss
@@ -1,14 +1,46 @@
 .map {
-	min-height: calc((100vw - 60px) * 0.375);
-	background-image: url(@images/map.png);
-	background-size: 100%;
-	background-repeat: no-repeat;
+	padding-right: 0;
 	margin-right: 60px;
+	position: relative;
 
-	@include tablet {
+	@include desktop_extra_small {
 		display: none;
-		min-height: calc(100vw * 0.375);
-		margin-right: 0;
+	}
+
+	&__svg {
+		
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 3;
+
+		svg {
+			width: 100%;
+			height: 100%;
+
+			path {
+				fill: $white;
+				opacity: 0;
+				cursor: pointer;				
+				user-select: none;
+			}
+		}
+	}
+
+	&__image {
+		background-repeat: no-repeat;
+		background-size: 100%;
+		transition: background-image $transitionDuration;
+
+		img {
+			transition: opacity $transitionDuration;
+		}
+		
+		&_preload {
+			display: none;
+		}
 	}
 }
 
