--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -10,6 +10,8 @@ $gray30: #b3b3b3;
 $gray20: #cccccc;
 $gray10: #ededed;
 $gray04: #f5f5f5;
+$green10: #DBF1DF;
+$green20: #B4DDBA;
 $green50: #00aa4d;
 $green60: #227a2f;
 $red: #f65d5d;
