--- a/src/styles/components/business/_map.scss
+++ b/src/styles/components/business/_map.scss
@@ -7,6 +7,14 @@
 		display: none;
 	}
 
+	&__wrapper {
+		display: none;
+
+		&._load {
+			display: block;
+		}
+	}
+
 	&__svg {
 		
 		position: absolute;
@@ -25,6 +33,11 @@
 				opacity: 0;
 				cursor: pointer;				
 				user-select: none;
+
+				&._active {
+					width: 100%;
+					height: 100%;
+				}
 			}
 		}
 	}
@@ -32,14 +45,46 @@
 	&__image {
 		background-repeat: no-repeat;
 		background-size: 100%;
-		transition: background-image $transitionDuration;
-
-		img {
-			transition: opacity $transitionDuration;
-		}
+		transition: background-image 0.1s;
 		
-		&_preload {
+		img {
+			transition: opacity 0.1s;
+			position: relative;
+			pointer-events: none;
+			z-index: 5;
+			width: 100%;
+			height: fit-content;
+		}
+	}
+
+	&__preloader {
+		display: block;
+
+		&._load {
 			display: none;
+		}
+
+		&__item {
+			width: 150px;
+			height: 150px;
+			background: linear-gradient($green10, $green20, $green60);
+			border-radius: 50%;
+			margin: 20px auto 0;
+			position: relative;
+			animation: preloaderRotation 0.9s ease 0s infinite;
+
+			&::after {
+				content: '';
+				width: 120px;
+				height: 120px;
+				position: absolute;
+				background-color: $white;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				border-radius: 50%;
+			}
 		}
 	}
 }
