--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import 'base/vars';
 @import 'base/mixins';
 @import 'base/basic';
+@import 'base/animation';
 
 @import 'components/ui/button';
 @import 'components/ui/link';
