--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,3 +73,4 @@
 @import 'components/business/error-page';
 @import 'components/business/cookie';
 @import 'components/business/map-preview';
+@import 'components/business/fraction';
