--- a/src/styles/components/business/_service-card.scss
+++ b/src/styles/components/business/_service-card.scss
@@ -68,6 +68,10 @@
 		right: 0;
 		margin: auto;
 		z-index: -1;
+
+		img {
+			filter: brightness(0.3);
+		}
 	}
 
 	&_secondary {
@@ -142,6 +146,10 @@
 
 			@include tablet {
 				height: 200px;
+			}
+
+			img {
+				filter: brightness(1);
 			}
 		}
 	}
