--- a/src/styles/components/business/_event-card.scss
+++ b/src/styles/components/business/_event-card.scss
@@ -3,6 +3,7 @@
 	cursor: pointer;
 	display: grid;
 	grid-template-rows: 300px auto 75px;
+	width: 100%;
 	height: 100%;
 
 	@include tablet_small {
