feat: map-preview

--- a/src/html/components/business/_map.html
+++ b/src/html/components/business/_map.html
@@ -34,7 +34,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_administration">
@@ -54,7 +54,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_agroprom">
@@ -74,7 +74,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_airport">
@@ -94,7 +94,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_education">
@@ -114,7 +114,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_factory">
@@ -134,7 +134,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_hospital">
@@ -154,7 +154,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 	
 			<div class="map-preview__item map-preview__item_oil">
@@ -173,7 +173,7 @@
 						</li>
 					</ul>
 				</div>
-				<a href="#" class="link link_green-arrow map-preview__more">Все решения</a>
+				@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary btn_secondary_green',children:'все решения'})
 			</div>
 		</div>
 	</div>
