--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -299,6 +299,12 @@
 	font-weight: 500;
 }
 
+@mixin medium-14-uppercase {
+	font-size: 14px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
 @mixin medium-12-uppercase {
 	font-size: 12px;
 	font-weight: 500;
