feat: fractions and map's script

--- a/src/html/components/business/_fraction.html
+++ b/src/html/components/business/_fraction.html
@@ -124,6 +124,14 @@
 					</div>                
 				  </li>
 				</ul>
+				<ul class="list fraction__list">
+				  <li>
+					<div class="fraction__content fraction__content_bold">
+					  <p>Строительство дата центров <br>и центра обработки данных (ЦОД)</p>
+					  <a href="#">Подробнее</a>
+					</div>                
+				  </li>
+				</ul>
 			  </div>
 			  <div class="fraction__column">
 				<ul class="list fraction__list">
@@ -139,6 +147,21 @@
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
+					<li>
+						<div class="fraction__content">
+							<p>Инженерная инфраструктура</p>
+							<a href="#">Подробнее</a>
+						</div>                
+						</li>
+				</ul>
+				<ul class="list fraction__list">
+				  <li>
+					<div class="fraction__content fraction__content_bold">
+					  <p>«Протокол». <br>
+							Программно-аппаратный комплекс (ПАК)</p>
+					  <a href="#">Подробнее</a>
+					</div>                
+				  </li>
 				</ul>
 			  </div>
 			  <div class="fraction__column">
@@ -149,6 +172,12 @@
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
+					<li>
+						<div class="fraction__content">
+							<p>ИТ-ИНФРАСТРУКТУРА</p>
+							<a href="#">Подробнее</a>
+						</div>                
+						</li>
 				</ul>
 			  </div>    
 			</div>
@@ -169,7 +198,7 @@
 				<ul class="list fraction__list">
 				  <li>
 					<div class="fraction__content">
-					  <p>IT-инфраструктура</p>
+					  <p>ИТ-инфраструктура</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
@@ -228,6 +257,21 @@
 				  <li>
 					<div class="fraction__content">
 					  <p>Автоматическое пожаротушение <br>и автоматика зданий</p>
+					  <a href="#">Подробнее</a>
+					</div>                
+				  </li>
+					<li>
+						<div class="fraction__content">
+							<p>ИНЖЕНЕРНАЯ ИНФРАСТРУКТУРА</p>
+							<a href="#">Подробнее</a>
+						</div>                
+						</li>
+				</ul>
+				<ul class="list fraction__list">
+				  <li>
+					<div class="fraction__content fraction__content_bold">
+					  <p>Строительство дата центров <br>
+							и центра обработки данных (ЦОД)</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
@@ -291,6 +335,12 @@
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
+					<li>
+						<div class="fraction__content">
+							<p>Единый ситуационный центр</p>
+							<a href="#">Подробнее</a>
+						</div>                
+				  </li>
 				</ul>
 				<ul class="list fraction__list">
 					<li>
@@ -316,6 +366,14 @@
 					</div>                
 				  </li>
 				</ul>
+				<ul class="list fraction__list">
+				  <li>
+					<div class="fraction__content fraction__content_bold">
+					  <p>AutoGate: автоматизированная <br>система транспортных КПП</p>
+					  <a href="#">Подробнее</a>
+					</div>                
+				  </li>
+				</ul>
 			  </div>
 			  <div class="fraction__column">
 				<ul class="list fraction__list">
@@ -327,7 +385,7 @@
 				  </li>
 				  <li class="fraction__item_offset-130">
 					<div class="fraction__content">
-					  <p>Единый ситуационный центр</p>
+					  <p>Машинное зрение <br>и нейросетевая видеоаналитика</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
@@ -340,8 +398,8 @@
 				</ul>
 				<ul class="list fraction__list">
 					<li class="fraction__item_offset-130">
-						<div class="fraction__content">
-						  <p>Машинное зрение <br>и нейросетевая видеоаналитика</p>
+						<div class="fraction__content fraction__content_bold">
+						  <p>Построение ИТ <br>и Инженерной инфраструктуры</p>
 						  <a href="#">Подробнее</a>
 						</div>          
 					  </li>
@@ -353,7 +411,7 @@
 					</li>
 					<li>
 						<div class="fraction__content fraction__content_bold">
-						  <p>Обнаружение и подавление БПЛА <br>Автоматические охранные БПЛА</p>
+						  <p>Система мониторинга физиологических <br>параметров операторов</p>
 						  <a href="#">Подробнее</a>
 						</div>          
 					  </li>
@@ -451,7 +509,7 @@
 				  </li>
 				  <li>
 					<div class="fraction__content">
-					  <p>IT-инфраструктура</p>
+					  <p>ИТ-инфраструктура</p>
 					  <a href="#">Подробнее</a>
 					</div>          
 				  </li>
@@ -475,13 +533,13 @@
 				<ul class="list fraction__list">
 				  <li>
 					<div class="fraction__content">
-					  <p>IT-инфраструктура</p>
+					  <p>ИТ-инфраструктура</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
 				  <li>
 					<div class="fraction__content">
-					  <p>Инженерная инфраструктура</p>
+					  <p>Промышленный интернет вещей, <br>промышленный Wi-Fi, БШПД</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
@@ -527,6 +585,12 @@
 							  <a href="#">Подробнее</a>
 							</div>                
 						  </li>
+							<li class="fraction__item_offset-80">
+								<div class="fraction__content">
+									<p>Инженерная инфраструктура</p>
+									<a href="#">Подробнее</a>
+								</div>                
+								</li>
 					</ul>                
 				  </li>
 				</ul>
@@ -739,7 +803,7 @@
 				  </li>
 				  <li>
 					<div class="fraction__content">
-					  <p>IT-инфраструктура</p>
+					  <p>ИТ-инфраструктура</p>
 					  <a href="#">Подробнее</a>
 					</div>                
 				  </li>
